# flotte-user-management

./: .dockerignore  .env  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: audit.yml  docker.yml  rust.yml
src/: lib.rs  main.rs  utils.rs
src/database/: mod.rs  models.rs  permissions.rs  redis_operations.rs  role_permissions.rs  roles.rs  tokens.rs  user_roles.rs  users.rs
src/server/: http_server.rs  messages.rs  mod.rs  rpc_methods.rs  user_rpc.rs
src/server/documentation/: mod.rs  style.css
src/utils/: error.rs  mod.rs
