[package]
name = "flotte-user-management"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgrpc = {path = "./msg-rpc"}
postgres = "0.17.5"
dotenv = "0.15.0"