[package]
name = "flotte-user-management"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgrpc = {path = "./msg-rpc"}
postgres = "0.17.5"
serde_postgres = "0.2.0"
dotenv = "0.15.0"
redis = "0.17.0"
serde = {version = "1.0.115", features = ["serde_derive"]}
rand = "0.7.3"
scrypt = "0.4.1"
zeroize = {version = "1.1.0", features = ["zeroize_derive"]}
byteorder = "1.3.4"
rmp-serde = "0.14.4"
rmp = "0.8.9"
log = "0.4.11"
env_logger = "0.7.1"
colored = "2.0.0"
crossbeam-utils = "0.7.2"