[package]
name = "flotte-user-management"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgrpc = "0.1.0"
postgres = "0.17.5"
serde_postgres = "0.2.0"
dotenv = "0.15.0"
serde = {version = "1.0.115", features = ["serde_derive"]}
rand = "0.7.3"
bcrypt = "0.8.2"
zeroize = {version = "1.1.0", features = ["zeroize_derive"]}
byteorder = "1.3.4"
rmp-serde = "0.14.4"
rmp = "0.8.9"
log = "0.4.11"
env_logger = "0.7.1"
colored = "2.0.0"
crossbeam-utils = "0.7.2"
mime = "0.3.16"
serde_json = "1.0.57"
rouille = "3.0.0"
base64 = "0.12.3"
chrono = "0.4.15"
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
scheduled-thread-pool = "0.2.5"
num_cpus = "1.13.0"
parking_lot = "0.11.0"
regex = "1.4.2"
lazy_static = "1.4.0"